--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,10 +22,26 @@ body {
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+.blabla::-webkit-scrollbar {
+  width: 0px; /* Adjust the width as needed */
+}
 
-/* .blabla {
+.blabla::-webkit-scrollbar-track {
+  background: transparent; /* This makes the track transparent */
+}
+
+.blabla::-webkit-scrollbar-thumb {
+  background-color: transparent; /* This makes the thumb (scrollbar) transparent */
+}
+
+.blabla {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
   scroll-snap-type: x mandatory;
-} */
+}
+
+.w-300px {
+  /* max-width: 1300px; */
+  width: 350px;
+}
